# simple-rag-project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  git_push.sh  pyproject.toml
.github/workflows/: ci-cd.yml
infrastructure/qdrant/: docker-compose.yml
monitoring/: otel-collector-config.yml  prometheus.yml
monitoring/grafana/provisioning/dashboards/: rag-dashboard.json
monitoring/grafana/provisioning/datasources/: datasource.yml
src/simple_rag_project/: app.py  create_embeddings.py
tests/: conftest.py  test_api.py  test_qdrant_search.py
